--- a/.env.tests
+++ b/.env.tests
@@ -4,7 +4,7 @@
 agent_prompts_file="tests/data/base_prompts.yaml"
 agent_api_base_url="http://localhost:5055"
 sql_prompts_file="tests/data/base_sql_prompts.yaml"
-scenario_prompts_file="tests/data/base_prompts.yaml"
+scenario_prompts_file="tests/data/base_scenario_prompts.yaml"
 
 
 ################################################################################
