add sql to e2e api

--- a/.env.tests
+++ b/.env.tests
@@ -72,7 +72,7 @@ logging_format=terminal #json
 ################################################################################
 #### Slack
 ################################################################################
-slack_webhook_url=test_hook
+slack_webhook_url=https://hooks.slack.com/services/test_hook
 
 ################################################################################
 #### Email
@@ -82,3 +82,13 @@ sender_email=email@email.com
 receiver_email=email@email.com
 smtp_host=smtp.email.com
 smtp_port=587
+
+################################################################################
+#### Database
+################################################################################
+PG_HOST=localhost
+PG_PORT=5432
+PG_NAME=test_db
+PG_USER=test_user
+PG_PASSWORD=test_password
+database_type=postgres
