--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pytest>=8.3.5",
     "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.1",
     "smolagents[telemetry]>=1.13.0",
     "tabulate>=0.9.0",
     "uvicorn>=0.34.0",
