converted to yaml

--- a/evals/pytest.ini
+++ b/evals/pytest.ini
@@ -1,22 +1,24 @@
 [pytest]
 # Pytest configuration for evaluation tests
 
-# Add current directory to Python path
-pythonpath = .
+# Add current directory and parent to Python path
+pythonpath = . ..
 
 # Test discovery patterns
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Markers for different test types
+# Markers for different test types (aligned with Makefile)
 markers =
-    e2e: End-to-end evaluation tests
-    tool_agent: Tool agent evaluation tests
-    ir: Information retrieval evaluation tests
-    enhance: Enhancement evaluation tests
-    pre_check: Pre-check guardrail tests
-    post_check: Post-check guardrail tests
+    tool_e2e: Tool end-to-end evaluation tests (eval_tool_e2e)
+    tool_enhance: Tool enhancement evaluation tests (eval_tool_enhance)
+    tool_pre_check: Tool pre-check guardrail tests (eval_tool_pre_check)
+    tool_post_check: Tool post-check guardrail tests (eval_tool_post_check)
+    tool_ir: Tool information retrieval evaluation tests (eval_tool_ir)
+    tool_tools: Tool agent evaluation tests (eval_tool_tools)
+    sql_e2e: SQL end-to-end evaluation tests (eval_sql_e2e)
+    sql_stages: SQL stage-specific tests (eval_sql_stages)
     slow: Tests that take significant time
     judge: Tests using LLM judge evaluation
 
@@ -25,6 +27,7 @@ addopts =
     -v
     --tb=short
     --strict-markers
+    -s
 
 # Timeout for individual tests (in seconds)
 timeout = 300
@@ -40,8 +43,8 @@ timeout = 300
 console_output_style = progress
 
 # Log settings
-log_cli = true
-log_cli_level = INFO
+log_cli = false
+log_cli_level = WARNING
 log_cli_format = %(asctime)s [%(levelname)s] %(message)s
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
